language/move-lang/tests/move_check/typing/type_variable_join_single_unpack_assign_invalid.exp
error: 

    ┌── tests/move_check/typing/type_variable_join_single_unpack_assign_invalid.move:12:14 ───
    │
 13 │         (f2: bool);
    │              ^^^^ Invalid type annotation
    ·
 12 │         (f1: u64);
    │              --- The type: 'u64'
    ·
 13 │         (f2: bool);
    │              ---- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/type_variable_join_single_unpack_assign_invalid.move:17:18 ───
    │
 18 │         (f2: Box<bool>);
    │              ^^^^^^^^^ Invalid type annotation
    ·
 17 │         (f1: Box<u64>);
    │                  --- The type: 'u64'
    ·
 18 │         (f2: Box<bool>);
    │                  ---- Is not compatible with: 'bool'
    │

